// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth when click toggle button change title 1`] = `<title data-vue-meta="true">SignUp</title>`;

exports[`Auth when click toggle button render correctly 1`] = `
<section>
  <heading-stub
    class="is-large"
    mode="out-in"
    name="fade"
  >
    
      titles.signUp
    
  </heading-stub>
   
  <form>
    <text-field-stub
      aria-label="email"
      autofocus=""
      class="has-underline"
      placeholder="email"
      required=""
      type="email"
      value=""
    />
     
    <text-field-stub
      aria-label="password"
      class="password has-underline"
      placeholder="password"
      required=""
      type="password"
      value=""
    />
     
    <text-field-stub
      aria-label="passwordConfirmation"
      class="has-underline"
      placeholder="passwordConfirmation"
      type="password"
      value=""
    />
     
    <footer>
      <!---->
       
      <!---->
       
      <div
        class="buttons"
      >
        <btn-stub
          class="submit-button is-rounded is-primary"
          type="submit"
        >
          
          signUp
        
        </btn-stub>
         
        <button
          class="toggle-button"
          type="button"
        >
          <span>
            or
          </span>
          
          or.login
        
        </button>
      </div>
    </footer>
  </form>
   
  <footer
    class="auth-footer"
  >
    <locale-select-stub
      class="locale-select"
    />
     
    <!---->
  </footer>
</section>
`;

exports[`Auth when user does not logged in render correctly 1`] = `
<section>
  <heading-stub
    class="is-large"
    mode="out-in"
    name="fade"
  >
    
      titles.login
    
  </heading-stub>
   
  <form>
    <text-field-stub
      aria-label="email"
      autofocus=""
      class="has-underline"
      placeholder="email"
      required=""
      type="email"
      value=""
    />
     
    <text-field-stub
      aria-label="password"
      class="password has-underline"
      placeholder="password"
      required=""
      type="password"
      value=""
    />
     
    <!---->
     
    <footer>
      <a
        class="forgot"
        name="fade"
      >
        
          forgot
        
      </a>
       
      <!---->
       
      <div
        class="buttons"
      >
        <btn-stub
          class="submit-button is-rounded is-primary"
          type="submit"
        >
          
          login
        
        </btn-stub>
         
        <button
          class="toggle-button"
          type="button"
        >
          <span>
            or
          </span>
          
          or.signUp
        
        </button>
      </div>
    </footer>
  </form>
   
  <footer
    class="auth-footer"
  >
    <locale-select-stub
      class="locale-select"
    />
     
    <!---->
  </footer>
</section>
`;

exports[`Auth when user does not logged in render title correctly 1`] = `<title data-vue-meta="true">Login</title>`;
